--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
 
   <% else %>
     <li>
-      <a href="#">
+      <a href="/session/new">
         <button class='navbar-btn btn hvr-radial-out login-btn'>
           Log in
         </button>
