--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,8 @@
   <% end %>
   </ul>
 </nav>
-
 <% if flash[:errors] %>
-  <%= flash[:errors].join("<br>").html_safe %>
+  <div class="errors">
+    <%= flash[:errors].join("<br>").html_safe %>
+  </div>
 <% end %>
