--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -1,6 +1,6 @@
 
 <section class="modal-img-container">
-  <span class="modal-post-country">
+  <!-- <span class="modal-post-country">
     <%= post.escape('country') %>
   </span>
   <span class="modal-post-category-main">
@@ -8,7 +8,7 @@
   </span>
   <span class="modal-post-author">
     <%= post.escape('author') %>
-  </span>
+  </span> -->
   <img src="<%= post.escape('full_img') %>">
 
   <div class="likes-count">
@@ -19,11 +19,6 @@
 
 <div class="post-content">
   <div class="post-caption">
-    <div id="google_translate_element"></div><script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, multilanguagePage: true}, 'google_translate_element');
-    }
-    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <%= post.escape('caption') %>
   </div>
 </div>
