--- a/app/assets/templates/countries/show.jst.ejs
+++ b/app/assets/templates/countries/show.jst.ejs
@@ -1,5 +1,7 @@
 <h2 class="country-title group">
-  <a href="#/countries/<%= country.escape("name").toLowerCase() %>"><%= country.escape("name") %></a>
+  <strong>
+    <a href="#/countries/<%= country.escape("name").toLowerCase() %>"><%= country.escape("name") %></a>
+  </strong>
 </h2>
 
 <ul class="country-posts group">
