fix addFeed form, add comment in BB

--- a/app/assets/templates/posts/_thumbCore.jst.ejs
+++ b/app/assets/templates/posts/_thumbCore.jst.ejs
@@ -14,6 +14,6 @@
   </div>
   <div class="comments-count">
     <span class="icon-comment-alt"></span>
-    <span class="comments-count-num">0</span>
+    <span class="comments-count-num"><%= post.escape('comment_count') %></span>
   </div>
 </section>
