--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -16,4 +16,9 @@
     <div class="post-comments">
     </div>
   <% } %>
+  <form class="add-comment">
+    <textarea name='comment[body]' id='body' placeholder value='Whoa! This is...'>
+    </textarea><br>
+    <button>Submit</button>
+  </form>
 </div>
