--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -12,13 +12,13 @@
   <div class="post-caption">
     <%= post.escape('caption') %>
   </div>
-  <% if (post.escape('comment_count') > 0) { %>
-    <div class="post-comments">
-    </div>
-  <% } %>
-  <form class="add-comment">
-    <textarea name='comment[body]' id='body' placeholder value='Whoa! This is...'>
+  <div class="post-comments">
+  </div>
+
+  <form class="comment-form">
+    <input type="hidden" name="comment[post_id]" value="<%= post.escape('id') %>">
+    <textarea name='comment[body]' id='body' placeholder='Whoa! This is...'>
     </textarea><br>
-    <button>Submit</button>
+    <button class="add-comment">Submit</button>
   </form>
 </div>
