--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,7 @@ ul {
   background: black;
   cursor: pointer;
   border-color: #000;
+  color: #fff;
 }
 
 .new-category {
@@ -454,18 +455,49 @@ ul {
 
 .post-content {
   overflow: auto;
-
-  .goog-logo-link img {
-    width: 37px;
-  }
 }
 
-.goog-te-banner-frame.skiptranslate {
-    display: none !important;
-    }
-body {
-    top: 0px !important;
-    }
+.likes {
+  padding-top: 5px;
+  font-family: 'open sans';
+  font-size: 16px;
+}
+
+.post-caption {
+  border-bottom: 1px solid #ccc;
+  padding: 15px 0;
+  font-size: 22px;
+  font-weight: 300;
+}
+
+.post-comments {
+  padding: 5px 0;
+}
+
+.comment-item {
+  padding: 5px 0;
+  font-family: 'open sans';
+  font-size: 12px;
+}
+
+.comment-body {
+  width: 600px;
+  border: solid 1px #aaa;
+  border-radius: 5px;
+  font-size: 20px;
+  padding: 5px;
+  position: relative;
+  float: left;
+}
+
+.add-comment {
+  float: right;
+  padding: 8px;
+}
+
+.pointer {
+  cursor: pointer;
+}
 
 /* Form Styling */
 
@@ -641,3 +673,4 @@ button {
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
