--- a/app/assets/templates/feeds/form.jst.ejs
+++ b/app/assets/templates/feeds/form.jst.ejs
@@ -27,5 +27,4 @@
   </label>
   <br>
 <% }); %>
-<button class="submit">Submit</button>
-<a href='#/'>Back</a>
+<button class="submit btn">Submit</button>
