--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -13,7 +13,7 @@
 
 <div class="post-content">
   <div class="likes">
-    <i class="icon-heart-empty pointer"></i>
+    <i class="icon-heart pointer"></i>
     <span class="likes-count-num">
       <%= post.escape('likers_names') %>
     </span>
