add feed success msg

--- a/app/assets/templates/feeds/form.jst.ejs
+++ b/app/assets/templates/feeds/form.jst.ejs
@@ -1,6 +1,4 @@
-<h1>
-  <%= feed.isNew() ? 'Add Feed' : 'Edit Category' %>
-</h1>
+<h1>Add Feed</h1>
 
 <label>
   <input name="ig_user" type="text" value placeholder="Handle (Instagram)" class="ig-handle-input"><br>
@@ -27,4 +25,4 @@
   </label>
   <br>
 <% }); %>
-<button class="submit btn">Submit</button>
+<button class="add-feed btn hvr-radial-out">Add feed</button>
