--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,6 +42,10 @@ a:hover {
   color: #999;
 }
 
+.alert a {
+  color: 'navy';
+}
+
 img {
   display: block;
   width: 100%;
@@ -78,6 +82,19 @@ ul {
   cursor: pointer;
   border-color: #000;
   color: #fff;
+}
+
+.alert {
+  position: relative;
+  margin: 0 auto;
+  width: 400px;
+  padding: 11px 0;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  text-align: center;
+  background-color: #eee;
+  font-weight: 300;
+  font-family: 'open sans';
 }
 
 .new-category {
@@ -510,6 +527,12 @@ ul {
 .add-comment {
   float: right;
   padding: 8px;
+}
+
+.add-feed {
+  padding: 8px 20px;
+  margin-top: 8px;
+  font-size: 18px;
 }
 
 .pointer {
