--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,11 +179,11 @@ ul {
   background: #fffeff;
 }
 
-.categories-list, .countries-list {
+.group-list {
 
 }
 
-.category-item, .country-item {
+.group-item {
   top: 72px;
   position: relative;
   display: block;
@@ -192,7 +192,7 @@ ul {
   padding-top: 40px;
 }
 
-.category-title, .country-title {
+.group-title {
   font: 700 42px "Playfair Display", serif;
   /* text-transform: uppercase; */
   letter-spacing: 2px;
@@ -221,7 +221,7 @@ ul {
 //   src: url('proximanova-black.ttf');
 // }
 
-.category-posts, .country-posts {
+.group-posts {
   list-style: none;
   margin: 0 auto;
   text-align: center;
@@ -247,7 +247,7 @@ ul {
   border: 1px solid #ccc;
   cursor: pointer;
 
-  .country-name a, .category-name a {
+  .group-name a {
     color: #000;
   }
 
@@ -266,7 +266,7 @@ ul {
   }
 }
 
-.country-name, .category-name {
+.group-name {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 14px;
