--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,9 @@
     <div class="modal-close">
     </div>
   </div>
+
+  <footer class="group">
+    &copy; 2015. Made with <i class="icon-heart"></i> by <a href="https://www.linkedin.com/pub/lily-g-zhang/17/27/159">lilyxl8</a>
+  </footer>
 </body>
 </html>
