--- a/app/assets/templates/posts/_thumbCore.jst.ejs
+++ b/app/assets/templates/posts/_thumbCore.jst.ejs
@@ -9,11 +9,11 @@
 
 <section class="counters group">
   <div class="likes-count">
-    <i class="icon-heart-empty"></i>
+    <i class="fa fa-heart-o"></i>
     <span class="likes-count-num"><%= post.escape('like_count') %></span>
   </div>
   <div class="comments-count">
-    <span class="icon-comment-alt"></span>
+    <span class="fa fa-comment-o"></span>
     <span class="comments-count-num"><%= post.escape('comment_count') %></span>
   </div>
 </section>
