--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>leppo</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -19,7 +19,7 @@
   </div>
 
   <footer class="group">
-    &copy; 2015. Made with <i class="icon-heart"></i> by <a href="https://www.linkedin.com/pub/lily-g-zhang/17/27/159">lilyxl8</a>
+    &copy; 2015. Made with <i class="fa fa-heart"></i> by <a href="https://www.linkedin.com/pub/lily-g-zhang/17/27/159">lilyxl8</a>
   </footer>
 </body>
 </html>
