--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -490,7 +490,7 @@ ul {
     vertical-align: top;
     line-height: 2;
   }
-  .icon-heart {
+  .fa-heart {
     color: #555;
     font-size: 32px;
   }
