--- a/app/assets/templates/categories/show.jst.ejs
+++ b/app/assets/templates/categories/show.jst.ejs
@@ -8,6 +8,8 @@
       <a href="#/countries/<%= category.escape('name').toLowerCase() %>">
         <%= category.escape("name") %>
       </a>
+    <% } else if (groupBy == "liked") { %>
+      <a>Liked</a>
     <% } %>
   </strong>
 </h2>
