--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,13 @@
       Sign in
     </button>
   </a>
+  <br>
+
+  <a href="https://instagram.com/oauth/authorize/?client_id=542116928d5047218ea73bc368729081&redirect_uri=http://leppo.herokuapp.com&response_type=code">
+    <button class='small-btn btn hvr-radial-out'>
+      Sign up via <i class="fa fa-instagram"></i>
+    </button>
+  </a>
 </section>
 
 <div style="position: fixed;
