--- a/app/assets/templates/feeds/form.jst.ejs
+++ b/app/assets/templates/feeds/form.jst.ejs
@@ -12,7 +12,7 @@
   <br>
     <label for="<%= category.escape('id') %>" class="category-option">
       <input type="radio" name="category_id" id="<%= category.escape('id') %>" value="<%= category.escape('id') %>" />
-      <%= category.escape('title') %>
+      <%= category.escape('name') %>
     </label>
 <% }); %>
 <br>
