--- a/app/assets/templates/users/new.jst.ejs
+++ b/app/assets/templates/users/new.jst.ejs
@@ -11,11 +11,11 @@
   <input class="account-field" name="user[password]" type="password" value placeholder="Password">
   <br>
   <br>
-  <input class="btn account-btn hvr-radial-out" type="submit" value="Sign up">
+  <button class="btn account-btn hvr-radial-out">Sign up</button>
   <br>
 </form>
 
-<a href="/session/new">
+<a href="#signin">
   <button class='small-btn btn hvr-radial-out'>
     Sign in
   </button>
