--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -25,7 +25,7 @@
   <div class="post-comments">
   </div>
 
-  <% if ($('.navbar-btn').last().val() === "Sign out") { %>
+  <% if(Leppo.currentUser.isSignedIn()) { %>
     <form class="comment-form">
       <input type="hidden" name="comment[post_id]" value="<%= post.escape('id') %>">
       <textarea class="comment-body" name='comment[body]' id='body' rows="1"></textarea>
